# esp32-midi-theremin

./: .gitignore  esp32-midi-theremin.ino  sketch_mar23a.ino
loop-midi/: CMakeLists.txt  README.md  test_midi_list.cpp
loop-midi/app/: CMakeLists.txt  app.manifest  app.rc  main.cpp  ports.cpp  ports.h  registry.cpp  registry.h  resource.h  tray.cpp  tray.h
loop-midi/driver/: CMakeLists.txt  vmidi.def  vmidi.h  vmidi_driver.cpp
loop-midi/kdriver/: CMakeLists.txt  install.bat  uninstall.bat  vmidi.inf  vmidi_km.cpp  vmidi_km.h
loop-midi/shared/: ipc.h  ringbuffer.h
loop-midi/test/: CMakeLists.txt
midi-bridge-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
midi-bridge-app/electron/: main.ts  preload.ts
midi-bridge-app/src/: App.tsx  index.css
midi-bridge-app/src/components/: ConnectionPanel.tsx  CustomChordEditor.tsx  HeaderBar.tsx  MidiLog.tsx  NoteSelector.tsx  OctaveDisplay.tsx  PressureBar.tsx  SensorLane.tsx  SensorLanes.tsx  SetupGuide.tsx  StatusIndicator.tsx  TemplateBar.tsx
midi-bridge-app/src/hooks/: useCustomChords.ts  useMidiBridge.ts  useTemplates.ts
midi-bridge-app/src/lib/: BuiltInSynth.ts  MidiParser.ts  SerialMidiBridge.ts
midi-bridge-app/src/types/: electron.d.ts
